corrected scaling issue on smallest display

--- a/styles.css
+++ b/styles.css
@@ -52,11 +52,11 @@ iframe {
 /* your styles here */
 
 h2 {
-  font-size: 200%;
+  font-size: 2.5em;
 }
 
 p {
-  font-size: 160%;
+  font-size: 1.5em;
 }
 
 .allCardsWrapper {
@@ -76,6 +76,7 @@ p {
 
 .imageContainer {
   position: relative;
+  border: 1px solid red;
 }
 
 img {
@@ -86,29 +87,33 @@ figcaption {
   width: 6em;
   background-color: var(--color-secondary);
   position: absolute;
-  bottom: 8px;
-  left: 40px;
+  bottom: 1em;
+  left: 2em;
   font-size: 1.5em;
 }
 
 .articleWrapper {
   display: block;
-  width: 90vw;
-  height: 20vh;
+  width: 100%;
+  height: 50vh;
+  border: 1px solid black;
 }
 
 main {
-  width: 80vw;
+  width: 90%;
   margin-left: auto;
   margin-right: auto;
   margin-bottom: 1rem;
+  border: 1px solid red;
 }
 
 article {
+  height: 80%;
   overflow: scroll;
 }
 
 button {
+  margin-top: 1em;
   border-radius: 5px;
   border: none;
   text-align: left;
